[package]
name = "actix_middleware_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.13"
env_logger = "0.6.2"
futures = "0.3.18"
tokio = { version = "1.12.0", features = ["full"] }
yansi = "0.5.0"
chrono = "0.4.19"
serde = "1.0.130"
serde_json = "1.0.68"
serde_derive = "1.0.130"